# libHexHex

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  GPL.txt  LICENSE  README.md
CI/: ci-mac.sh
demo/cmdline_tool/: CMakeLists.txt  main.cc
demo/minimum_example/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  HexExtractor.cc  HexExtractor.hh  predicates.c
src/HexEx/: FileAccessor.cc  HexEx.hh  HexExtractor.cc  HexExtractor.hh  MeshConversion.hh  Stopwatches.hh  predicates.c
src/HexHex/: Config.cc  Config.hh  Config_json.hh  HexExtractor.cc  HexExtractor.hh  HexHex.cc  HexHex.hh  c_api.cc  c_api.h
src/HexHex/Commons/: CellIGM.hh  Direction.hh  FlatMap.hh  Matrix4x4T.hh  MeshElement.cc  MeshElement.hh  Permutation.hh  Transition.cc  Transition.hh
src/HexHex/Config/: Version.hh.in
src/HexHex/GlobalTopology/: HexCellExtractor.cc  HexCellExtractor.hh  HexEdgeExtractor.cc  HexEdgeExtractor.hh  cell_connectivity.cc  cell_connectivity.hh
src/HexHex/LocalTopology/: ConstantIndices.hh  HexVertexGenerator.cc  HexVertexGenerator.hh  Propellers.cc  Propellers.hh
src/HexHex/PiecewiseLinear/: PLEPoint.hh  PLFPoint.hh  PLHexFaceExtractor.cc  PLHexFaceExtractor.hh  PLMesh.cc  PLMesh.hh  halfface_traversal_check.cc  halfface_traversal_check.hh
src/HexHex/Predicates/: ExactPredicates.cc  ExactPredicates.hh  GeneratorPredicates.cc  GeneratorPredicates.hh  TracingPredicates.cc  TracingPredicates.hh
src/HexHex/Preprocessing/: HexHexPreprocessor.cc  HexHexPreprocessor.hh  Parametrization.cc  Parametrization.hh
src/HexHex/Utils/: FileAccessor.cc  FileAccessor.hh  HexHexError.hh  ParametrizedMesh.hh  PropertyNames.cc  PropertyNames.hh  Stopwatches.hh  TestMeshes.cc  TestMeshes.hh  TetMeshCache.cc  TetMeshCache.hh  Threading.hh  Typedefs.hh  Utils.cc  Utils.hh  csvfile.hh
src/HexHex/Utils/MemoryUsage/: MemoryUsage.hh  MemoryUsage_dummy.cc  MemoryUsage_jemalloc.cc
src/HexHex/VertexExtraction/: HexVertexExtractor.cc  HexVertexExtractor.hh  epsilon_geometry.hh
tests/: CMakeLists.txt  c_api_test.cc  cellextraction_test.cc  common.cc  common.hh  gridisomorphism_test.cc  navigation_test.cc  predicate_test.cc  unittest.cc
tools/HexHex/: CMakeLists.txt  main.cc
tools/experiments/: CMakeLists.txt  benchmark_refinement.cc  main.cc  rasterization_epsilon.cc  test_cube.hh
tools/minimum_example/: CMakeLists.txt  main.cc
